[package]
name = "os"
version = "0.1.0"
authors = ["Gautam Mekkat <Blue9@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"  # Disable stack unwinding

[profile.release]
panic = "abort"

[dependencies]
