[package]
name = "os"
version = "0.1.0"
authors = ["Gautam Mekkat <Blue9@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.2"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.5.2"
volatile = "0.2.6"
